# mupnp

./: .clang-format  .clang-tidy  .gitignore  .travis.yml  AUTHORS  CGUpnpAction_8h.html  CGUpnpAction_8h.js  CGUpnpAction_8m.html  CGUpnpControlPoint_8h.html  CGUpnpControlPoint_8h.js  CGUpnpControlPoint_8m.html  CGUpnpDevice_8h.html  CGUpnpDevice_8h.js  CGUpnpDevice_8m.html  CGUpnpDevice_8m.js  CGUpnpIcon_8h.html  CGUpnpIcon_8h.js  CGUpnpIcon_8m.html  CGUpnpService_8h.html  CGUpnpService_8m.html  CGUpnpStateVariable_8h.html  CGUpnpStateVariable_8m.html  CGUpnp_8h.html  CMakeLists.txt  COPYING  ChangeLog  DOXYGEN_IMPROVEMENTS.md  Doxyfile  Doxyfile.objc  ESP32_BUILD_GUIDE.md  ESP32_IMPLEMENTATION_NOTES.md  ESP32_SUMMARY.md  ESP32_TESTING_CHECKLIST.md  Makefile.am  Makefile.in  README.md  README_8md.html  aclocal.m4  action_8c.html  action_8c.js  (+537 more)
clinkc/: COPYING  ChangeLog  Makefile.am  bootstrap  config.h.in  configure.in
clinkc/debian/: changelog  clinkc-dev.install  control  copyright  docs  rules
clinkc/include/: Makefile.am
clinkc/include/cybergarage/http/: chttp.h
clinkc/include/cybergarage/io/: cfile.h
clinkc/include/cybergarage/net/: cinterface.h  csocket.h  curi.h  curl.h
clinkc/include/cybergarage/soap/: csoap.h
clinkc/include/cybergarage/upnp/: caction.h  cargument.h  ccontrolpoint.h  cdevice.h  cicon.h  cservice.h  cstatevariable.h  cupnp.h  cupnp_function.h  cupnp_limit.h  cupnp_status.h
clinkc/include/cybergarage/util/: clist.h  cmutex.h  cstring.h  cthread.h  ctime.h
clinkc/include/cybergarage/xml/: cxml.h
clinkc/lib/tengine/gnu/: Makefile.inc
clinkc/lib/unix/: Makefile.am
clinkc/lib/win32/vc60/: CyberLinkC.dsp  CyberLinkC.dsw
clinkc/sample/: Makefile.am
clinkc/sample/clock/: clock_device.c
clinkc/sample/clock/unix/: Makefile.am  clock_main.c
clinkc/sample/upnpdump/: upnpdump.c
clinkc/sample/upnpdump/unix/: Makefile.am
clinkc/src/cybergarage/http/: chttp.c  chttp_date.c  chttp_header.c  chttp_header_list.c  chttp_packet.c  chttp_persistent_connection.c  chttp_request.c  chttp_response.c  chttp_server.c  chttp_server_list.c
clinkc/src/cybergarage/io/: cfile.c
clinkc/src/cybergarage/net/: cdatagram_packet.c  cinterface.c  cinterface_function.c  cinterface_list.c  cnet_function.c  csocket.c  csocket_list.c  curi.c  curl.c
clinkc/src/cybergarage/soap/: csoap.c  csoap_request.c  csoap_response.c
clinkc/src/cybergarage/upnp/: caction.c  caction_list.c  cargument.c  cargument_list.c  ccontrolpoint.c  ccontrolpoint_event.c  ccontrolpoint_http_server.c  cdevice.c  cdevice_advertiser.c  cdevice_http_server.c  cdevice_list.c  cdevice_ssdp_server.c  cicon.c  cicon_list.c  cservice.c  cservice_list.c  cservice_notify.c  cservice_ssdp_server.c  cservicestate_table.c  cstatevariable.c  cupnp_function.c  cupnp_status.c
clinkc/src/cybergarage/util/: clist.c  cmutex.c  cstring.c  cstring_function.c  cstring_tokenizer.c  cthread.c  cthread_list.c  ctime.c
clinkc/src/cybergarage/xml/: cxml_attribute.c  cxml_attribute_list.c  cxml_function.c  cxml_node.c  cxml_node_list.c  cxml_parser.c  cxml_parser_expat.c  cxml_parser_libxml2.c
components/mupnp/: CMakeLists.txt  Kconfig  idf_component.yml
examples/clock/unix/: Makefile.am  Makefile.in  clock_main.c
examples/upnpdump/unix/: Makefile.am  Makefile.in
examples/upnpigddump/unix/: Makefile.am  Makefile.in
include/: Makefile.am  Makefile.am.build  Makefile.in
include/cybergarage/: typedef.h
include/cybergarage/http/: chttp.h
include/cybergarage/io/: cfile.h
include/cybergarage/net/: cinterface.h  csocket.h  curi.h  curl.h
include/cybergarage/soap/: csoap.h
include/cybergarage/upnp/: caction.h  cargument.h  ccontrolpoint.h  cdevice.h  cicon.h  cservice.h  cstatevariable.h  cupnp.h  cupnp.h.in  cupnp_function.h  cupnp_limit.h  cupnp_status.h
include/cybergarage/upnp/control/: ccontrol.h
include/cybergarage/upnp/event/: cevent.h  cnotify.h  cproperty.h  csubscriber.h  csubscription.h
include/cybergarage/upnp/ssdp/: cssdp.h  cssdp_server.h
include/cybergarage/util/: ccond.h  cdictionary.h  clist.h  clog.h  cmutex.h  cstring.h  cthread.h  ctime.h
include/cybergarage/xml/: cxml.h
include/mupnp/: action.h  argument.h  controlpoint.h  device.h  icon.h  service.h  statevariable.h  typedef.h  upnp.h  upnp.h.in  upnp_function.h  upnp_limit.h  upnp_status.h  version.h  version.h.build  version.h.gen
include/mupnp/control/: control.h
include/mupnp/event/: event.h  notify.h  property.h  subscriber.h  subscription.h
include/mupnp/http/: http.h
include/mupnp/io/: file.h
include/mupnp/net/: interface.h  socket.h  uri.h  url.h
include/mupnp/soap/: soap.h
include/mupnp/ssdp/: ssdp.h  ssdp_server.h
include/mupnp/util/: cond.h  dictionary.h  list.h  log.h  mutex.h  string.h  thread.h  time.h
include/mupnp/xml/: xml.h
lib/unix/: Makefile.am  Makefile.am.build  Makefile.in
sample/upnpavdump/unix/: Makefile.am  Makefile.in
std/av/: COPYING  ChangeLog  Makefile.in  README.xbox360  aclocal.m4  bootstrap  configure  configure.ac  configure.in  configure_macports
std/av/include/: Makefile.am  Makefile.in
std/av/lib/: Makefile.in
std/av/lib/unix/: Makefile.am  Makefile.in
std/av/sample/: Makefile.am  Makefile.in
std/av/sample/common/: ckeyboard.c  ckeyboard.h  crss.c  crss.h  cwebservice.c  cwebservice.h
std/av/sample/upnpavdump/: Makefile.in  upnpavdump.c
std/av/sample/upnpavserver/: Makefile.in
std/av/testunit/: ClinkAVTestCase.h  ClinkAVTestCaseRenderer.cpp  RendererDevice.c  cppunitmain.cpp
std/av/testunit/macosx/: ClinkAVUnitTest.h  ClinkAVUnitTest.m
std/upnpav/: COPYING  ChangeLog  configure.in
std/upnpav/include/: Makefile.am  Makefile.in
std/upnpav/lib/unix/: Makefile.am  Makefile.in
std/upnpav/sample/: Makefile.am
std/upnpav/sample/common/: ckeyboard.c  crss.c  crss.h
std/upnpav/testunit/macosx/: ClinkAVUnitTest.h  ClinkAVUnitTest.m
std/upnpav/wrapper/objc/: CGUpnpAvContentDirectory.m  (+11 more)
test/unix/: Makefile.am  Makefile.am.build  Makefile.in
tests/unix/: Makefile.am  Makefile.am.build  Makefile.in
testunit/unix/: Makefile.am
(+858 files in other folders)
